# trowasoft-multiseq64-mmplugin

./: .envrc  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  plugin-mm.json  plugin.json
.flox/: env.json
licenses/: trowaSoft-VCV-README.md
src/: Module_multiSeq_simple.hpp  TSOSCCommon.hpp  TSOSCCommunicator.hpp  TSOSCSequencerListener.hpp  TSOSCSequencerOutputMessages.hpp  metamodule-plugin.cpp  trowaSoft.hpp
